<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Pixel Animate</string>

  
    <string name="menu_about_title">About</string> 
    <string name="menu_about_summary">More info at http://droidalyzer.com/ioiomatrix.html\n\nDesigned by Open Gadgets LLC</string>
    <string name="versionString">Version</string> 
    
   <string name="oneTimeSetupString">One Time Setup: Copying stock animations to your SD card.</string> 
   <string name="bluetoothPairingString">Please ensure Bluetooth pairing has been completed prior. The Bluetooth pairing code is: 4545."</string> 
    
   
   <string name="menu_instructions_title">Instructions</string>
   <string name="setupInstructionsString">First pair your Android device to the Pixel LED frame which will show up as \'IOIO\' in Bluetooth using code 4545.\n\nTap an animation to display it on the Pixel LED frame.\n\nFollow the instructions below to add your own animations which are in animated gif format to this app:\n\nConnect your Android device to your computer with a USB cable.\n\nFrom your computer, open your Android device and copy your animated gifs to the pixel/pixelanimate folder of your SD card or internal storage if your device does not have a removeable SD card.\n\nAfter done copying, select Rescan from this app\'s menu\n\nYou can also delete the sample animated gifs leaving only your own.\n\nYou\&apos;ll get the best results by pre-scaling your animated gifs to 32x32 resolution and using a solid black background.\n\nAnimated gifs not in 32x32 resolution will be scaled automatically to 32x32. Animated gifs higher than 500x500 resolution may cause this app to crash and therefore it is recommended to use animated gifs of 300x300 resolution or lower.</string>
   <string name="setupInstructionsStringTitle">Instructions</string>   
     
     
    <string name="prefTitle">Pixel Animate Settings</string>
    <string name="menu_prefs_title">Settings</string>
    <string name="prefSummary">Pixel Animate Settings</string>
    
    <string name="scanAll">Show All Album Pics</string>
    <string name="pref_scanAll_default">false</string>
    <string name="scanAllSummary">Only animations in the pixel/pixelanimate directory of your SD card will be displayed. Checking this box displays all SD card pictures.</string>
  
    <string name="OKText">OK</string>   
    <string name="notFoundString">Pixel LED Frame Not Found</string>   
   
    <string name="selected_matrix">selected_matrix</string>
    <string name="matrix">LED Matrix Selection</string>
    <string name="matrixSummary">Select your RGB LED Matrix model</string>    
    <string name="dialogTitleMatrix">LED Matrix Selection</string>
    <string name="matrix_default_value">3</string>   
    
    <string name="fps_override">fps_override</string>
    <string name="FPSOverrideTitle">FPS Override</string>
    <string name="FPSOverrideSummary">Normally you won\'t need to change this, only if you want to override the frames per second of the animations. Restart app after changing.</string>    
    <string name="dialogTitleFPSOverride">FPS Override</string>
    <string name="FPSOverrideDefault">0</string>  
    
    <string name="bluetooth_pair">Blueooth Pairing</string>
    <string name="bluetooth_pairSummary">Shortcut to the Bluetooth settings screen. Pair to IOIO using code: 4545</string>
    
    <string name="slideShowtitle">Slide Show Settings</string>
    <string name="slideShowtitleSummary">Slide Show Settings</string>
   
    <string name="slideShowMode">Slide Show Mode</string>    
    <string name="slideShowModeDefault">false</string>
    <string name="slideShowModeSummary">Slide Show Mode</string>
    
    <string name="noSleep">Disable Power Savings</string>    
    <string name="pref_noSleepDefault">false</string>
    <string name="noSleepSummary">Forces the app to be always on, your device will not go into power savings mode while this app is running. Good if using as a Kiosk for example. </string>
    
    <string name="menu_rescan_title">Rescan</string>
    <string name="rescan_screen_verbage">Now scanning your SD card or internal memory for new animations or deletions to the pixelanimation folder, just a moment&#8230;</string>
    
    <string name="startup_verbage_1">One Time Setup</string>
    <string name="startup_verbage_2">Copying stock animations to your SD card or internal memory&#8230;</string>
    <string name="firstTime_instructions">After this completes, select Instructions from the menu to use your own animations</string>
  
    <string name="loadingImagesPlsWaitTitle">Please Wait</string>
    <string name="loadingImagesPlsWait">Loading animations, just a moment&#8230;</string>
    
    <string name="stopSlideShowMessage">You\'re still in slide show mode, swipe from right to left to end the slide show and then you can select a single image</string>
    <string name="loadingImagesPlsWaitTitle">Please Wait</string>
    <string name="loadingImagesPlsWait">Loading animations, just a moment&#8230;</string>
    
    <string name="debugMode">Debug Mode</string>    
    <string name="pref_debugMode">pref_debugMode</string>
    <string name="pref_debugModeDefault">false</string>    
    <string name="debugModeSummary">Displays debug messages, use to see how often the Bluetooth connections are getting disconnected and connected as well as other debug messages</string>
    
    
    <string name="StartInstructions">Tap to Animate</string>
    

   
    
</resources>
